packages/edxml-test-corpus/edxml_test_corpus-3.0.0.dev2-py3-none-any.whl/edxml_test_corpus/tests/invalid/ontology/upgrade-immutable-event-type-relation-concept2.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if changing the concept2 attribute of a property relation is refused.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="datetime"/>
    </objecttypes>
    <concepts>
      <concept name="a" description="a" display-name-singular="a" display-name-plural="a" version="1"/>
      <concept name="b" description="a" display-name-singular="a" display-name-plural="a" version="1"/>
      <concept name="c" description="a" display-name-singular="a" display-name-plural="a" version="1"/>
    </concepts>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match">
            <property-concept name="a" confidence="8" cnp="8"/>
          </property>
          <property name="b" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match">
            <property-concept name="b" confidence="8" cnp="8"/>
            <property-concept name="c" confidence="8" cnp="8"/>
          </property>
        </properties>
        <relations>
          <inter property1="a" property2="b" concept1="a" concept2="b" directed="false" description="[[a]] linked to [[b]]" confidence="2" predicate="linked"/>
        </relations>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="2">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match">
            <property-concept name="a" confidence="8" cnp="8"/>
          </property>
          <property name="b" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match">
            <property-concept name="b" confidence="8" cnp="8"/>
            <property-concept name="c" confidence="8" cnp="8"/>
          </property>
        </properties>
        <relations>
          <inter property1="a" property2="b" concept1="a" concept2="c" directed="false" description="[[a]] linked to [[b]]" confidence="2" predicate="linked"/>
        </relations>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
